# python-practice

./: .gitignore  README.md  pyproject.toml
exercises/bloque_01_fundamentos_absolutos/: 01_01_ejercicios_print_input.py  01_02_ejercicios_print_input.py  02_01_ejercicios_variables.py  03_01_ejercicios_tipos_datos.py  04_01_ejercicios_operadores_expresiones.py
exercises/bloque_01_fundamentos_absolutos/leccion_01_print_input/: 01_ejercicios_leccion.py
exercises/bloque_02_control_de_flujo/: 01_01_ejercicios_condicionales.py  01_02_ejercicios_condicionales.py  01_03-ejercicios_condicionales.py  01_04_ejercicios_condicionales.py
playground/: 01_print_input.py  02_tipos_de_datos.py  03_cast.py  04_variables.py  05_input.py  06_operadores_expresiones.py  07_condicionales.py  08_listas.py  08_listas_ejercicios1.py  08_listas_ejercicios2.py
