[project]
name = "python-practice"
version = "0.1.0"
description = "Proyecto para practicar resolviendo ejercicios de programación en Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.19",
]
[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"
